@@ -1,12 +1,0 @@
-<h2><%= l(:newissuealerts_index, :project => @project.name) %></h2>
-<p>
-<%= link_to(l(:newissuealerts_text), {:action => 'new', :project_id => @project.identifier}, :class => 'icon icon-add' ) %> 
-</p>
-<% for newissuealert in @newissuealerts %> 
-<div class="box tabular settings">
-<p><label><%= l(:email_addresses) %>:</label> <%= newissuealert.mail_addresses %></p>
-<p><label><%= l(:enabled) %>:</label> <%= newissuealert.enabled ? l(:general_text_yes) : l(:general_text_no) %></p>
-<p><label><%= l(:newissuealerts_set_priority) %>:</label> <%= newissuealert.priority ? l(:general_text_yes) : l(:general_text_no) %></p>
-<p><%= link_to l(:edit_delete), {:action => 'edit', :id => newissuealert.id, :project_id => @project.identifier } %></p>
-</div>
-<% end %> 
