@@ -9,7 +9,15 @@ Dispatcher.to_prepare :redmine_newissuealerts do
   unless Issue.included_modules.include? RedmineNewissuealerts::IssuePatch
     Issue.send(:include, RedmineNewissuealerts::IssuePatch)
   end
+
+  require_dependency 'projects_helper'
+  unless ProjectsHelper.included_modules.include? RedmineNewissuealerts::ProjectsHelperPatch
+    ProjectsHelper.send(:include, RedmineNewissuealerts::ProjectsHelperPatch)
+  end
 end
+
+# It requires the file in lib/redmine_newissuealerts/hooks.rb
+require_dependency 'redmine_newissuealerts/hooks'
 
 Redmine::Plugin.register :redmine_newissuealerts do
   name 'Redmine Newissuealerts plugin'
@@ -27,12 +35,12 @@ Redmine::Plugin.register :redmine_newissuealerts do
     # 
     # The commented line will make all elements public
     #permission :newissuealerts, {:newissuealerts => [:index, :edit, :new]}, :public => true
-    permission :view_newissuealerts, :newissuealerts => :index
-    permission :edit_newissuealerts, :newissuealerts => :edit
-    permission :new_newissuealerts, :newissuealerts => :new
+    #permission :view_newissuealerts, :newissuealerts => :index
+    permission :edit_newissuealerts, {:projects => :settings, :newissuealerts => [:index, :edit]}, :require => :member
+    permission :new_newissuealerts, {:projects => :settings, :newissuealerts => [:index, :new]}, :require => :member
+    permission :view_newissuealerts, {:projects => :settings, :newissuealerts => :index}, :require => :member
   end
-  
   # A new item is added to the project menu
   #menu :project_menu, :newissuealerts, { :controller => 'newissuealerts', :action => 'index' }, :caption => 'New Issue Alerts', :after => :activity, :param => :project_id
-  menu :project_menu, :newissuealerts, { :controller => 'newissuealerts', :action => 'index' }, :caption => :newissuealert_menuitem, :param => :project_id
+  #menu :project_menu, :newissuealerts, { :controller => 'newissuealerts', :action => 'index' }, :caption => :newissuealert_menuitem, :param => :project_id
 end
