@@ -3,9 +3,11 @@
     * Remove support for redmine 0.8
   * Fixes:
     * showing %s instead of project name
+    * make sure that view alerts is allowed for people that can create/edit them
   * Features:
     * Dont send notification for private issues (tks jbutz)
     * Allow setting Email priority (fixes GH#6)
+    * Move NIA settings under Project->Settings->Email on New Issue
 
 0.0.2 (2009-08-01):
   * Improved documentation and licensing
